# apps/auth-service/src/controller/auth.controller.ts
@@ -1,8 +1,10 @@
 import { Request, Response, NextFunction } from "express";
 import { checkOtpRestrictions, sendOtp, trackOtpRequests, validateRegistrationData, verifyOtp } from "../utils/auth.helper";
 import prisma from "@packages/libs/prisma";
-import { ValidationError } from "@packages/error-handler";
+import { AuthError, ValidationError } from "@packages/error-handler";
 import bcrypt from "bcryptjs";
+import jwt from "jsonwebtoken";
+import { setCookie } from "../utils/cookies/setCookie";
 
 // Register a new user
 export const userRegistration = async (req: Request, res: Response, next: NextFunction) => {
@@ -48,5 +50,40 @@ export const verifyUser = async (req:Request, res:Response, next:NextFunction) =
         })
     } catch (error) {
         next(error);
+    }
+}
+
+export const loginUser = async (req: Request, res: Response, next: NextFunction) => {
+    try {
+        const {email, password} = req.body;
+        if (!email || !password){
+           return next (new ValidationError("Email and password are required!"));
+        }
+        const user = await prisma.users.findUnique({where: {email}});
+        if (!user) {
+            return next (new AuthError("User doesn't exist!"));
+        }
+
+        // Verify password
+        const isMatch = await bcrypt.compare(password, user.password!);
+        if (!isMatch){
+            return next (new AuthError("Invaild email or password!"));
+        }
+
+        // Generate access and refresh token
+        const accessToken = jwt.sign({id: user.id, role: "user"}, process.env.ACCESS_TOKEN_SECRET!, {expiresIn: "15m"});
+        const refreshToken = jwt.sign({id: user.id, role: "user"}, process.env.REFRESH_TOKEN_SECRET!, {expiresIn: "7d"});
+
+        // Store the access and refresh token in an httpOnly secure cookie
+        setCookie(res, "access_token", accessToken);
+        setCookie(res, "refresh_token", refreshToken);
+
+        res.status(200).json({
+            message: "Login sucessful!",
+            user: { id: user.id, email: user.email, name: user.name}
+        });
+
+    } catch (error) {
+        return next(error)
     }
 }
