# apps/auth-service/src/routes/auth.router.ts
@@ -1,9 +1,10 @@
 import express, { Router } from "express";
-import { userRegistration, verifyUser } from "../controller/auth.controller";
+import { loginUser, userRegistration, verifyUser } from "../controller/auth.controller";
 
 const router:Router = express.Router();
 
 router.post("/user-registation", userRegistration);
 router.post("/verify-user", verifyUser);
+router.post("/login-user", loginUser);
 
 export default router;
